# riot-account-switcher

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: README.es.md  README.fr.md  README.pt.md
src/: crypto.rs  db.rs  main.rs  riot.rs  ui.rs
