[package]
name = "riot-switcher"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "K1R4LABS-RiotAccSwitcher"
path = "src/main.rs"

[dependencies]
rusqlite   = { version = "0.31", features = ["bundled"] }
ratatui    = "0.29"
crossterm  = "0.28"
anyhow     = "1"
aes-gcm    = "0.10"
pbkdf2     = "0.12"
sha2       = "0.10"
rand       = "0.8"
base64     = "0.22"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rfd        = "0.15"
ureq       = { version = "2", features = ["native-tls"] }
native-tls = "0.2"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
